--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
+    "mocha": "^3.0.2",
     "rollup": "^0.34.13",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-eslint": "^2.0.2",
