--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
+    "immutable": "^3.8.1",
+    "lodash": "^4.15.0",
+    "predicates": "^1.0.1",
+    "ramda": "^0.22.1",
     "rollup": "^0.34.13",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-eslint": "^2.0.2",
-    "rollup-plugin-strip": "^1.1.1"
+    "rollup-plugin-strip": "^1.1.1",
+    "wu": "^2.1.0"
   }
 }
